# iawriter-to-hugo

./: LICENSE  README.md  config-example.toml  pyproject.toml
iawriter_to_hugo/: make_hugo_blog.py
